@@ -11543,6 +11543,7 @@ condition:
   expr
   {
 	$$ = cb_build_cond ($1);
+	cb_end_cond ();
   }
 ;
 
