@@ -69,6 +69,9 @@ CB_WARNDEF (cb_warn_ignored_initial_val, "initial-value",
 CB_WARNDEF (cb_warn_prototypes, "prototypes",
 	    _("warn missing FUNCTION prototypes/definitions"))
 
+CB_WARNDEF (cb_warn_arithmetic_osvs, "arithmetic-osvs",
+	    _("warn if arithmetic expression precision has changed"))
+
 CB_NOWARNDEF (cb_warn_call_params, "call-params",
 	    _("warn non 01/77 items for CALL params"))
 
