@@ -115,6 +115,9 @@ relax-syntax-checks:		no
 # executing perform is recognized if reached.
 perform-osvs:			no
 
+# Compute intermediate decimal results like IBM OSVS
+arithmetic-osvs:		no
+
 # If yes, linkage-section items remain allocated
 # between invocations.
 sticky-linkage:			no
