@@ -106,6 +106,9 @@ relax-syntax-checks:		no
 # executing perform is recognized if reached.
 perform-osvs:			yes
 
+# Compute intermediate decimal results like IBM OSVS
+arithmetic-osvs:		yes
+
 # If yes, linkage-section items remain allocated
 # between invocations.
 sticky-linkage:			yes
