@@ -398,6 +398,7 @@ test.conf: missing definitions:
 	no definition of 'larger-redefines-ok'
 	no definition of 'relax-syntax-checks'
 	no definition of 'perform-osvs'
+	no definition of 'arithmetic-osvs'
 	no definition of 'sticky-linkage'
 	no definition of 'relax-level-hierarchy'
 	no definition of 'hostsign'
